changes for SDS workshop updated to use jupyter-server-proxy

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-nlpeasy
+# nlpeasy
 spacy
 scikit-learn
 matplotlib
 seaborn
-jupyterlab
+jupyterlab>=2.1.4
 jupyter-server-proxy
+nodejs
+pandas
+spacy
+elasticsearch
+requests
+beautifulsoup4
